--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <img class="bd-placeholder-img rounded-circle img-fluid" src="alifsyah.jpg" width="180px">
       <br>
     <br>
-      <p class="lead">Halo, saya adalah Programmer. Selamat datang di portofolio saya. Silahkan jelajahi project saya</p>
+      <p class="lead">Selamat datang di portofolio saya, silahkan jelajahi project saya</p>
     <br>
       <p class="lead">
       <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Eksplorasi</a>
