menambah pading mobile view

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <div class="container-fluid text-white">
                             <div class="row">
                                 <div class="col-md-7 mt-md-5 pt-md-2 ms-md-4 ms-2 mt-5">
-                                    <h1 class="titlename">Alifsyah Panji</h1>
+                                    <h1 class="titlename pe-3">Alifsyah Panji</h1>
 
                                     <div>
                                         <h1 class="description pe-2">Programmer/Front End Web Developer</h1>
